--- a/baztian.jython/tasks/main.yml
+++ b/baztian.jython/tasks/main.yml
@@ -1,22 +1,22 @@
 ---
-- name: Check if Jython installed
+- name: Check if Jython {{ jython_version }} installed
   stat:
     path: "{{ jython_install_dir }}/jython-{{ jython_version }}"
   register: jython_directory
-- name: create download directory
+- name: Create download directory
   file:
     state: directory
     mode: 'u=rwx,go=rx'
     dest: '{{ jython_download_dir }}'
   when: not jython_directory.stat.exists
-- name: Download Jython
+- name: Download Jython {{ jython_version }}
   maven_artifact:
     group_id: org.python
     artifact_id: jython-installer
     version: "{{ jython_version }}"
     dest: "{{ jython_download_dir }}/jython-installer-{{ jython_version }}.jar"
   when: not jython_directory.stat.exists
-- name: Install Jython
+- name: Install Jython {{ jython_version }}
   become: true
   command: /usr/bin/java -jar "{{ jython_download_dir }}/jython-installer-{{ jython_version }}.jar" -s -d "{{ jython_install_dir }}/jython-{{ jython_version }}" creates="{{ jython_install_dir }}/jython-{{ jython_version }}"
   when: not jython_directory.stat.exists
@@ -24,7 +24,7 @@
   file:
     state: absent
     path:  "{{ jython_download_dir }}/jython-installer-{{ jython_version }}.jar"
-- name: Symlink default Jython
+- name: Symlink default Jython to Jython {{ jython_version }}
   become: true
   file:
     src: "jython-{{ jython_version }}"
