--- a/baztian.python/tasks/main.yml
+++ b/baztian.python/tasks/main.yml
@@ -19,5 +19,12 @@
       - python2.7
       - python3
       - python3.6
+      - python3-venv
       - python-lxml
       - python3-lxml
+- name: Install pipenv
+  include_role:
+    name: baztian.pip_venv
+  vars:
+      pkg: pipenv
+      version: 2018.11.26
