Update Teams-for-linux to 1.0. Only download fixed version debs if necessary

--- a/baztian.dev_tools/tasks/main.yml
+++ b/baztian.dev_tools/tasks/main.yml
@@ -159,12 +159,20 @@
     src: templates/postman.desktop.j2
     dest: /usr/local/share/applications/postman.desktop
   tags: postman
+- name: Gather installed packages
+  package_facts:
+  tags: ms_teams
+- name: Gather installed packages
+  package_facts:
+  tags: ripgrep
+  when: ansible_facts.packages['ripgrep']|default('undefined') != ripgrep_version
 - name: Download ripgrep {{ ripgrep_version }}
   get_url:
     url: https://github.com/BurntSushi/ripgrep/releases/download/{{ ripgrep_version }}/ripgrep_{{ ripgrep_version }}_amd64.deb
     checksum: "sha1:{{ ripgrep_sha1 }}"
     dest: /tmp/ripgrep_{{ ripgrep_version }}_amd64.deb
   tags: ripgrep
+  when: ansible_facts.packages['ripgrep']|default('undefined') != ripgrep_version
 - name: Install ripgrep {{ ripgrep_version }}
   apt:
     deb: /tmp/ripgrep_{{ ripgrep_version }}_amd64.deb
