Install get_repos.sh to get all repos from a git team https://gist.github.com/xalvarez/eb57f02c401a264f2ca40ffebcb145e9

--- a/baztian.git/tasks/main.yml
+++ b/baztian.git/tasks/main.yml
@@ -59,3 +59,9 @@
         . /opt/hub/etc/hub.bash_completion.sh
       fi
   become: no
+- name: Install get_repos.sh
+  get_url:
+    url: '{{ get_repos_url }}'
+    dest: /usr/local/bin/get_repos.sh
+    mode: "755"
+    force: yes
