--- a/baztian.vscode/tasks/main.yml
+++ b/baztian.vscode/tasks/main.yml
@@ -1,12 +1,8 @@
 ---
-- name: Add Apt signing key on remote server to keyring
+- name: Add Microsoft apt signing key on remote server to keyring
   apt_key:
-    data: "{{ lookup('file', 'microsoft.asc') }}"
     id: BC528686B50D79E339D3721CEB3E94ADBE1229CF
-    # setting keyring required to not collide with
-    # https://github.com/microsoft/vscode/blob/master/resources/linux/debian/postinst.template
-    keyring: /etc/apt/trusted.gpg.d/microsoft.gpg
-    state: present
+    keyserver: keyserver.ubuntu.com
 - name: Add apt repo for vs code
   apt_repository:
     repo: deb [arch=amd64] https://packages.microsoft.com/repos/vscode stable main
