--- a/baztian.pip_venv/tasks/main.yml
+++ b/baztian.pip_venv/tasks/main.yml
@@ -2,12 +2,12 @@
 - fail:
     msg: Failed installing python package {{ pkg }}. 'version' attribute required.
   when: not version
-- name: Install python venv to allow for software install inside virtual
-        python environments
+- name: Install python venv for python {{ py_version }} to allow for software
+        install inside virtual python environments
   apt:
-    pkg: python3-venv
+    pkg: python{{ py_version }}-venv
 - name: Prepare virtual env for {{ pkg }} python package version {{ version }}
-  command: python3 -m venv /opt/{{ pkg }}-{{ version }}
+  command: python{{ py_version }} -m venv /opt/{{ pkg }}-{{ version }}
   args:
     creates: /opt/{{ pkg }}-{{ version }}
 - name: Install {{ pkg }} python package version {{ version }}
