--- a/baztian.python/tasks/main.yml
+++ b/baztian.python/tasks/main.yml
@@ -17,9 +17,13 @@
   apt:
     pkg:
       - python2.7
+      - python2.7-dev
       - python3
-      - python3.6
+      - python3-dev
       - python3-venv
+      - python3.6
+      - python3.6-dev
+      - python3.6-venv
       - python-lxml
       - python3-lxml
 - name: Install pipenv
