--- a/baztian.dev_tools/tasks/main.yml
+++ b/baztian.dev_tools/tasks/main.yml
@@ -172,3 +172,14 @@
   apt:
     deb: /tmp/ripgrep_{{ ripgrep_version }}_amd64.deb
   tags: ripgrep
+- name: Install bump2version
+  include_role:
+    name: baztian.pip_venv
+    apply:
+      tags:
+        - bump2version
+  vars:
+      pkg: bump2version
+      version: 0.5.11
+      bin: bumpversion
+  tags: bump2version
