--- a/baztian.java/tasks/main.yml
+++ b/baztian.java/tasks/main.yml
@@ -12,7 +12,8 @@
   tags: jdk11
 - name: Download JDK-11
   get_url:
-    url: "https://github.com/AdoptOpenJDK/openjdk11-binaries/releases/download/jdk-{{ jdk11_version | replace('_', '%2B') }}/OpenJDK11U-jdk_x64_linux_hotspot_{{ jdk11_version }}.tar.gz"
+    url: "https://github.com/AdoptOpenJDK/openjdk11-binaries/releases/download/jdk-{{ jdk11_version | replace('_', '%2B') }}/\
+      OpenJDK11U-jdk_x64_linux_hotspot_{{ jdk11_version }}.tar.gz"
     checksum: "sha256:{{ jdk11_sha256 }}"
     dest: "/tmp/jdk11-{{ jdk11_version }}.tar.gz"
   tags: jdk11
