--- a/baztian.aws/tasks/main.yml
+++ b/baztian.aws/tasks/main.yml
@@ -48,6 +48,78 @@
     dest: "/usr/local/bin/aws-vault"
     state: link
   tags: aws_vault
+- name: Check if aws-vault {{ aws_vault_version }} already installed
+  stat:
+    path: /opt/aws-vault-{{ aws_vault_version }}/aws-vault
+  register: aws_vault_directory
+  tags: aws_vault
+- name: Create aws-vault {{ aws_vault_version }} directory
+  file:
+    path: /opt/aws-vault-{{ aws_vault_version }}
+    state: directory
+  tags: aws_vault
+- name: Download aws_vault {{ aws_vault_version }}
+  get_url:
+    url: https://github.com/99designs/aws-vault/releases/download/v{{ aws_vault_version }}/aws-vault-linux-amd64
+    checksum: sha256:{{ aws_vault_sha256 }}
+    dest: /opt/aws-vault-{{ aws_vault_version }}/aws-vault
+    mode: "755"
+  when: not aws_vault_directory.stat.exists
+  tags: aws_vault
+- name: Symlink default aws-vault version to aws-vault {{ aws_vault_version }}
+  file:
+    src: aws-vault-{{ aws_vault_version }}
+    dest: /opt/aws-vault
+    state: link
+  tags: aws_vault
+- name: Symlink aws-vault binary
+  file:
+    src: "/opt/aws-vault/aws-vault"
+    dest: "/usr/local/bin/aws-vault"
+    state: link
+  tags: aws_vault
+- name: Check if saml2aws {{ saml2aws_version }} already installed
+  stat:
+    path: /opt/saml2aws-{{ saml2aws_version }}/saml2aws
+  register: saml2aws_directory
+  tags: saml2aws
+- name: Create saml2aws {{ saml2aws_version }} directory
+  file:
+    path: /opt/saml2aws-{{ saml2aws_version }}
+    state: directory
+  tags: saml2aws
+- name: Download saml2aws {{ saml2aws_version }}
+  get_url:
+    url: https://github.com/Versent/saml2aws/releases/download/v{{ saml2aws_version }}/saml2aws_{{ saml2aws_version }}_linux_amd64.tar.gz
+    checksum: sha512:{{ saml2aws_sha512 }}
+    dest: /tmp/saml2aws-{{ saml2aws_version }}.tar.gz
+    mode: "755"
+  when: not saml2aws_directory.stat.exists
+  tags: saml2aws
+- name: Create saml2aws {{ saml2aws_version }} directory
+  file:
+    path: /opt/saml2aws-{{ saml2aws_version }}
+    state: directory
+  tags: saml2aws
+- name: Unarchive saml2aws {{ saml2aws_version }}
+  unarchive:
+    src: /tmp/saml2aws-{{ saml2aws_version }}.tar.gz
+    dest: /opt/saml2aws-{{ saml2aws_version }}
+    remote_src: yes
+  when: not saml2aws_directory.stat.exists
+  tags: saml2aws
+- name: Symlink default saml2aws version to saml2aws {{ saml2aws_version }}
+  file:
+    src: saml2aws-{{ saml2aws_version }}
+    dest: /opt/saml2aws
+    state: link
+  tags: saml2aws
+- name: Symlink saml2aws binary
+  file:
+    src: "/opt/saml2aws/saml2aws"
+    dest: "/usr/local/bin/saml2aws"
+    state: link
+  tags: saml2aws
 - name: Check if terraform {{ terraform_version }} already installed
   stat:
     path: /opt/terraform-{{ terraform_version }}/terraform
