--- a/baztian.jython/tasks/main.yml
+++ b/baztian.jython/tasks/main.yml
@@ -14,6 +14,8 @@
     group_id: org.python
     artifact_id: jython-installer
     version: "{{ jython_version }}"
+    # required until ansible 2.10 is available https://github.com/ansible/ansible/issues/66609
+    repository_url: https://repo1.maven.org/maven2
     dest: "{{ jython_download_dir }}/jython-installer-{{ jython_version }}.jar"
   when: not jython_directory.stat.exists
 - name: Install Jython {{ jython_version }}
@@ -52,6 +54,13 @@
 - name: Install Jython virtualenv package
   become: true
   pip:
-    name: virtualenv
-    executable: "{{ jython_install_dir }}/jython/bin/pip"
+    name: virtualenv==15.1.0
+    executable: "{{ jython_install_dir }}/jython-{{ jython_version }}/bin/pip"
   when: not jython_virtualenv_path.stat.exists
+- name: fix permissions
+  # see https://bugs.jython.org/issue2862
+  become: true
+  shell: >
+    find "{{ jython_install_dir }}/jython-{{ jython_version }}/Lib" -name
+    "*\$py.class" -print0 | xargs -0 chmod 644
+  changed_when: False
