--- a/baztian.jython/tasks/main.yml
+++ b/baztian.jython/tasks/main.yml
@@ -20,7 +20,9 @@
   when: not jython_directory.stat.exists
 - name: Install Jython {{ jython_version }}
   become: true
-  command: /usr/bin/java -jar "{{ jython_download_dir }}/jython-installer-{{ jython_version }}.jar" -s -d "{{ jython_install_dir }}/jython-{{ jython_version }}" creates="{{ jython_install_dir }}/jython-{{ jython_version }}"
+  command: /usr/bin/java -jar "{{ jython_download_dir }}/jython-installer-{{
+    jython_version }}.jar" -s -d "{{ jython_install_dir }}/jython-{{
+    jython_version }}" creates="{{ jython_install_dir }}/jython-{{ jython_version }}"
   when: not jython_directory.stat.exists
 - name: Cleanup Jython download
   file:
