Fix xfce workspace switches

--- a/baztian.xfce/defaults/main.yml
+++ b/baztian.xfce/defaults/main.yml
@@ -39,6 +39,10 @@ xfce_wm_shortcuts_remove:
 - <Primary><Alt>Down # Bottom workspace
 - <Primary><Alt>Left # Left workspace
 - <Primary><Alt>Right # Right workspace
+- <Control><Alt>Up # Upper workspace
+- <Control><Alt>Down # Bottom workspace
+- <Control><Alt>Left # Left workspace
+- <Control><Alt>Right # Right workspace
 - <Control>F1 # Workspace 1
 - <Control>F2 # Workspace 2
 - <Control>F3 # Workspace 3
