Move AWS vars from bashrc to profile so that they are catched up from IntelliJ IDEA

--- a/baztian.aws/tasks/main.yml
+++ b/baztian.aws/tasks/main.yml
@@ -142,7 +142,7 @@
   tags: saml2aws
 - name: Set default aws profile for saml2aws
   lineinfile:
-    path: ~/.bashrc
+    path: ~/.profile
     regexp: '^export {{ item }}='
     line: export {{ item }}=saml
   with_items:
