Forcibly overwrite hub as this seems to be installed on /usr/local/bin on github actions

--- a/baztian.git/tasks/main.yml
+++ b/baztian.git/tasks/main.yml
@@ -48,6 +48,7 @@
   file:
     src: "/opt/hub/bin/hub"
     dest: "/usr/local/bin/hub"
+    force: yes
     state: link
 - name: Add hub git alias and setup bash completion
   blockinfile:
