--- a/baztian.xfce/tasks/main.yml
+++ b/baztian.xfce/tasks/main.yml
@@ -77,6 +77,7 @@
     file:
       path: ~/.config/xfce4/terminal
       state: directory
+      mode: 0755
   - name: Import Xfce terminal terminalrc configuration
     get_url:
       url: '{{ xfce_terminal.terminalrc_url }}'
