Add missing apt updates

--- a/baztian.git/tasks/main.yml
+++ b/baztian.git/tasks/main.yml
@@ -1,4 +1,6 @@
 ---
+- name: Update apt cache.
+  apt: update_cache=yes cache_valid_time=3600
 - name: Install git and associated packages
   apt:
     pkg:
