--- a/baztian.vagrant/tasks/main.yml
+++ b/baztian.vagrant/tasks/main.yml
@@ -1,4 +1,6 @@
 ---
+- name: Update apt cache.
+  apt: update_cache=yes cache_valid_time=3600
 - name: Install Vagrant and dependencies
   apt:
     name:
