Migrate certain stuff from other apt installs to multimedia role

--- a/requirements.yml
+++ b/requirements.yml
@@ -17,5 +17,6 @@
 - src: baztian.js
 - src: baztian.jython
 - src: baztian.other_installs
+- src: baztian.multimedia
 - src: baztian.skype
 - src: baztian.xfce
