--- a/playbook.yml
+++ b/playbook.yml
@@ -60,6 +60,9 @@
       - include_role: name=baztian.other_installs
       tags: other_installs
     - block:
+      - include_role: name=baztian.multimedia
+      tags: multimedia
+    - block:
       - include_role: name=baztian.skype
       tags: skype
     - block:
