--- a/requirements.yml
+++ b/requirements.yml
@@ -18,5 +18,6 @@
 - src: baztian.jython
 - src: baztian.other_installs
 - src: baztian.multimedia
+- src: baztian.squeezeplay
 - src: baztian.skype
 - src: baztian.xfce
